--- a/i3status.conf
+++ b/i3status.conf
@@ -15,7 +15,7 @@ order += "volume master"
 order += "wireless wlan0"
 order += "ethernet eth0"
 order += "battery 0"
-order += "cpu_usage"
+#order += "cpu_usage"
 #order += "cpu_temperature 0"
 #order += "memory"
 #order += "load"
@@ -64,7 +64,7 @@ path_exists VPN {
 }
 
 tztime local {
-        format = "%d/%m/%Y %I:%M%p"
+        format = "%m/%d/%Y %I:%M%p"
 }
 
 load {
@@ -91,7 +91,7 @@ read_file uptime {
 
 volume master {
     format = "🔊%volume"
-    format_muted = "🔇"
+    format_muted = ""
     device = "default"
     mixer = "Master"
     mixer_idx = 0
