--- a/config
+++ b/config
@@ -54,10 +54,10 @@ bindsym $mod+d exec dmenu_run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+# bindsym $mod+j focus left
+# bindsym $mod+k focus down
+# bindsym $mod+l focus up
+# bindsym $mod+semicolon focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -179,3 +179,14 @@ bindsym $mod+r mode "resize"
 bar {
         status_command i3status --config ~/.config/i3/i3status.conf
 }
+
+# start redshift
+exec --no-startup-id redshift-gtk
+
+# lockscreen
+bindsym $mod+l exec i3lock --color=383838
+
+# prevent display from sleeping
+exec --no-startup-id xset s off
+exec --no-startup-id xset -dpms
+exec --no-startup-id xset s noblank
