--- a/config
+++ b/config
@@ -47,11 +47,11 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# bindsym $mod+d exec dmenu_run
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 # bindsym $mod+j focus left
@@ -183,10 +183,15 @@ bar {
 # start redshift
 exec --no-startup-id redshift-gtk
 
-# lockscreen
-bindsym $mod+l exec i3lock --color=383838
+# lock wm and turn off screens
+bindsym $mod+l exec i3lock --color=383838 && xset dpms force suspend
 
-# prevent display from sleeping
-exec --no-startup-id xset s off
-exec --no-startup-id xset -dpms
-exec --no-startup-id xset s noblank
+# screen off after 5 mins 
+exec xset dpms 0 0 300
+
+### OR
+
+# prevent display sleep
+# exec --no-startup-id xset s off
+# exec --no-startup-id xset -dpms
+# exec --no-startup-id xset s noblank
