--- a/config
+++ b/config
@@ -89,7 +89,7 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -195,6 +195,9 @@ bindsym $mod+Shift+Tab workspace prev
 
 # border to 1 pixel, also removes window titles
 for_window [class=".*"] border pixel 1
+
+# open nautilus
+bindsym $mod+e exec nautilus --no-desktop --new-window &
 
 # --- Sleep stuff ---
 
