--- a/config
+++ b/config
@@ -201,6 +201,7 @@ for_window [class="Chromium"] border pixel 0
 for_window [class="Gnome-terminal"] border pixel 0
 for_window [class="Codium"] border pixel 0
 for_window [class="firefox"] border pixel 0
+for_window [class="Nautilus"] border pixel 0
 
 # open nautilus
 bindsym $mod+e exec nautilus --no-desktop --new-window &
@@ -235,7 +236,7 @@ workspace "7" output DP-2
 # Send workspace 8 - 0 to second monitor
 workspace "8" output DP-0
 workspace "9" output DP-0
-workspace "0" output DP-0
+workspace "10" output DP-0
 
 # shutdown / restart / suspend menu
 # src: https://thevaluable.dev/i3-config-mouseless/
@@ -252,17 +253,12 @@ mode "$mode_system" {
 
 bindsym $mod+BackSpace mode "$mode_system"
 
-# floating window sizes and position
-for_window [class="KeePassXC"] floating enable
-for_window [class="KeePassXC"] floating_minimum_size 1920 x 1080
-for_window [class="KeePassXC"] floating_maximum_size 1920 x 1080
+# keepassxc always to workspace 10
+assign [class="KeePassXC"] $ws10
 
+# floating window sizes and position
 for_window [class="Gnome-terminal"] floating_minimum_size 1920 x 1080
 for_window [class="Gnome-terminal"] floating_maximum_size 1920 x 1080
-
-for_window [class="Nautilus"] floating enable
-for_window [class="Nautilus"] floating_minimum_size 1920 x 1080
-for_window [class="Nautilus"] floating_maximum_size 1920 x 1080
 
 for_window [class="Google-chrome"] floating_minimum_size 1920 x 1080
 for_window [class="Google-chrome"] floating_maximum_size 1920 x 1080
